# uriscv

./: .gdb_history  .gitignore  CMakeLists.txt  NOTE.md  README.md  REUSE.toml  Readme.md  TUTORIAL.md  compile_commands.json  config.h.in
.github/workflows/: release.yaml
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/base/: CMakeLists.txt  json.cc  trackable_mixin.cc
src/frontends/: CMakeLists.txt
src/frontends/qmps/: CMakeLists.txt  add_breakpoint_dialog.cc  add_suspect_dialog.cc  add_tracepoint_dialog.cc  address_line_edit.cc  application.cc  code_view.cc  cpu_status_map.cc  debug_session.cc  device_tree_model.cc  error_hooks.cc  hex_view.cc  mac_id_edit.cc  machine_config_dialog.cc  machine_config_view.cc  monitor_window.cc  processor_list_model.cc  processor_window.cc  register_set_snapshot.cc  stop_mask_view.cc  stoppoint_list_model.cc  suspect_type_delegate.cc  symbol_table_model.cc  terminal_view.cc  terminal_window.cc  tlb_model.cc  trace_browser.cc  ui_utils.cc
src/frontends/qriscv/: CMakeLists.txt  add_breakpoint_dialog.cc  add_suspect_dialog.cc  add_tracepoint_dialog.cc  address_line_edit.cc  application.cc  boolean_item_delegate.cc  code_view.cc  cpu_status_map.cc  create_machine_dialog.cc  debug_session.cc  device_tree_model.cc  device_tree_view.cc  error_hooks.cc  flat_push_button.cc  hex_view.cc  mac_id_edit.cc  machine_config_dialog.cc  machine_config_view.cc  main.cc  monitor_window.cc  processor_list_model.cc  processor_window.cc  qriscv.qrc  register_item_delegate.cc  register_set_snapshot.cc  register_set_widget.cc  stop_mask_view.cc  stoppoint_list_model.cc  suspect_type_delegate.cc  symbol_table_model.cc  terminal_view.cc  terminal_window.cc  tlb_model.cc  trace_browser.cc  tree_view.cc  ui_utils.cc
src/frontends/qriscv/data/: CMakeLists.txt  org.virtualsquare.umps3.desktop  org.virtualsquare.umps3.metainfo.xml  org.virtualsquare.uriscv.desktop  org.virtualsquare.uriscv.metainfo.xml
src/frontends/qriscv/data/icons/: CMakeLists.txt
src/gdb/: gdb.cc
src/include/base/: basic_types.h  bit_tricks.h  json.h  lang.h  trackable_mixin.h
src/include/gdb/: gdb.h
src/include/qmps/: add_breakpoint_dialog.h  add_suspect_dialog.h  add_tracepoint_dialog.h  address_line_edit.h  application.h  debug_session.h  device_tree_model.h  hex_view.h  machine_config_dialog.h  monitor_window.h  processor_window.h  register_item_delegate.h  register_set_snapshot.h  register_set_widget.h  stoppoint_list_model.h  symbol_table_model.h  tlb_model.h  trace_browser.h  trace_browser_priv.h  ui_utils.h
src/include/qriscv/: add_breakpoint_dialog.h  add_suspect_dialog.h  add_tracepoint_dialog.h  address_line_edit.h  application.h  boolean_item_delegate.h  code_view.h  code_view_priv.h  cpu_status_map.h  create_machine_dialog.h  debug_session.h  device_tree_model.h  device_tree_view.h  flat_push_button.h  hex_view.h  hex_view_priv.h  mac_id_edit.h  machine_config_dialog.h  machine_config_dialog_priv.h  machine_config_view.h  memory_view_delegate.h  monitor_window.h  monitor_window_priv.h  processor_list_model.h  processor_window.h  register_item_delegate.h  register_set_snapshot.h  register_set_widget.h  stop_mask_view.h  stoppoint_list_model.h  suspect_type_delegate.h  symbol_table_model.h  terminal_view.h  terminal_window.h  terminal_window_priv.h  tlb_model.h  trace_browser.h  trace_browser_priv.h  tree_view.h  ui_utils.h
src/include/support/liburiscv/: const.h  liburiscv.h  types.h
src/include/uriscv/: accelerator.h  aout.h  arch.h  bios.h  bios_defs.h  blockdev.h  blockdev_params.h  bus.h  config.h  const.h  core.h  cp0.h  cpu.h  csr.h  device.h  disassemble.h  error.h  event.h  hart.h  libvdeplug_dyn.h  machine.h  machine_config.h  memspace.h  mp_controller.h  mpic.h  mybus.h  myprocessor.h  processor.h  processor_defs.h  processor_riscv.h  regdef.h  stoppoint.h  symbol_table.h  systembus.h  time_stamp.h  types.h  utility.h  vde_network.h
src/support/: CMakeLists.txt
src/support/bios/: CMakeLists.txt  coreboot.S  exec.S  test.S
src/support/crt/: CMakeLists.txt  crti.S  crtso.S
src/support/ldscripts/: CMakeLists.txt  uriscvaout.ldscript  uriscvcore.ldscript
src/support/liburiscv/: CMakeLists.txt  liburiscv.S
src/tests/: a.out  test  test.s
src/uriscv/: CMakeLists.txt  blockdev.cc  bus.cc  config.cc  device.cc  disassemble.cc  elf2uriscv.cc  event.cc  hart.cc  machine.cc  machine_config.cc  memspace.cc  mkconfig.cc  mkdev.cc  mp_controller.cc  mpic.cc  mybus.cc  myprocessor.cc  objdump.cc  processor.cc  stoppoint.cc  symbol_table.cc  systembus.cc  testdis.cc  time_stamp.cc  utility.cc  vde_network.cc
tests/: Makefile  kernel  kernel.core.umps  kernel.core.uriscv  kernel.stab.uriscv  test.c  test.s  types.h
tests/p1/: Makefile  README.md  initial.c  pcb.c  term0.uriscv
tests/p1/generic_headers/: pandos_const.h  pandos_types.h
tests/p1/headers/: asl.h  exceptionHandler.h  syscall.h
tests/p2/: Makefile  config_machine.json  dump  exceptionHandler.c  handlerFunction.c  initial.c  p1test.c  p2test.c  pcb.c  scheduler.c  syscall.c
tests/p2/generic_headers/: pandos_const.h  pandos_types.h
tests/p2/headers/: exceptionHandler.h  globals.h  handlerFunction.h  pcb.h  scheduler.h
